--- a/diamm/static/stylesheets/_search.scss
+++ b/diamm/static/stylesheets/_search.scss
@@ -13,8 +13,8 @@
 }
 
 .type-filter {
-  font-family: $small-caps;
-  text-transform: lowercase;
+  font-family: $sans-serif;
+  font-size: 90%;
   padding: 0.5rem;
   border-bottom: 1px solid $diamm-light-grey;
   span {
