--- a/diamm/static/stylesheets/styles.scss
+++ b/diamm/static/stylesheets/styles.scss
@@ -23,12 +23,13 @@ html {
 body {
   line-height: 1.45;
   font-weight: 400;
-  font-family: "Alegreya Sans", Helvetica, Arial, sans-serif;
+  font-family: $sans-serif;
   color: $diamm-black;
 
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  -webkit-font-smoothing: antialiased;
 }
 
 div.search-result {
@@ -57,7 +58,7 @@ a {
 }
 
 p {
-  font-family: "Alegreya", serif;
+  font-family: $serif;
   margin-bottom: 1.3em;
   padding-top: 0.5em;
   padding-left: 0.3em;
@@ -65,25 +66,23 @@ p {
 
 h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
-  font-weight: inherit;
+  font-weight: 600;
   line-height: 1.2;
+  letter-spacing: normal;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 2.441em;
+  font-size: 1.602em;
 }
 
-h2 {font-size: 1.953em;}
+h2 {font-size: 1.424em;}
 
-h3 {font-size: 1.563em;}
+h3 {font-size: 1.266em;}
 
-h4 {
-  font-size: 1.25em;
-  letter-spacing: normal;
-}
+h4 {font-size: 1.125em;}
 
-small, .font_small {font-size: 0.8em;}
+small, .font_small {font-size: 0.889em;}
 
 .container {
   flex: 1 0 auto;
