--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -23,6 +23,11 @@
                         {% endwith %}
                     </li>
                     {% endfor %}
+                    <li>
+                    <a href="{{ url('search') }}{% if request.GET.q %}?q={{ request.GET.q }}{% endif %}&images=true">
+                        Sources (with images)
+                    </a>
+                    </li>
                 </ul>
             </div>
         </div>
