--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -62,32 +62,38 @@
     .column {
       display: none;
       position: absolute;
+      list-style-type: none;
       background-color: $diamm-white;
       float: left;
       margin-top: 0rem;
       margin-left: 0rem;
-      width: 15rem;
+      width: 25rem;
       padding: 0rem;
-      -webkit-column-gap: 2em;
-      -moz-column-gap: 2em;
-      column-gap: 2em;
+
     }
 
+    .column div {
+      -webkit-column-count: 3;
+      -moz-column-count: 3;
+      column-count: 3;
+    }
     .column a {
       display: block;
       margin-top: 0rem;
-      margin-left: 0em;
+      margin-left: 0.2rem;
       padding-left: 0rem;
-
+      font-size: 0.7rem;
     }
     .column ul {
       margin-left: 0.2rem;
     }
+
     .column li {
       margin-right: 0rem;
     }
 
     .dropdown-content-more {
+      list-style-type: square;
       margin-top: 0rem;
       margin-left: 0.2rem;
     }
