--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -1,5 +1,10 @@
 <div>
-    <p class="upper-info">{{ result.archive_s }}, {{ result.archive_city_s }} </p>
+    <p class="upper-info">
+        {% if result.public_images_b %}
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+        {% endif %}
+        {{ result.archive_s }}, {{ result.archive_city_s }} 
+    </p>
 
     <p class="lower-info">{{ result.source_type_s }}, {{ result.date_statement_s }}</p>
 </div>
