--- a/diamm/templates/website/search/results/result.jinja2
+++ b/diamm/templates/website/search/results/result.jinja2
@@ -28,7 +28,7 @@
 
 <div class="search-result">
     <h4>
-        {% if result.public_images_b and result.type == "source" %}
+        {% if result.type == "source" and result.public_images_b %}
             <i class="fa fa-picture-o" aria-hidden="true"></i>
         {% endif %}
         <a href="{{ result.url }}">{{ result_name(result) }}</a> <span class="result-type">{{ result.type | title }}</span>
