--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -32,5 +32,15 @@
     <script src="{{ static('javascripts/dist/bundle.js') }}" type="application/javascript"></script>
     {% block scripts %}
     {% endblock %}
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-70914579-2', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
