--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -32,6 +32,8 @@
     <script src="{{ static('javascripts/dist/bundle.js') }}" type="application/javascript"></script>
     {% block scripts %}
     {% endblock %}
+
+    {% if not debug %}
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -42,5 +44,6 @@
         ga('send', 'pageview');
 
     </script>
+    {% endif %}
 </body>
 </html>
