--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -2810,6 +2810,42 @@ form {
         border-bottom: none;
         background: #b92025;
         color: white; }
+    .navbar .navbar-list .column {
+      display: none;
+      position: absolute;
+      list-style-type: none;
+      background-color: white;
+      float: left;
+      margin-top: 0rem;
+      margin-left: 0rem;
+      width: 25rem;
+      padding: 0rem; }
+    .navbar .navbar-list .column div {
+      -webkit-column-count: 3;
+      -moz-column-count: 3;
+      column-count: 3; }
+    .navbar .navbar-list .column a {
+      display: block;
+      margin-top: 0rem;
+      margin-left: 0.2rem;
+      padding-left: 0rem;
+      font-size: 0.7rem; }
+    .navbar .navbar-list .column ul {
+      margin-left: 0.2rem; }
+    .navbar .navbar-list .column li {
+      margin-right: 0rem; }
+    .navbar .navbar-list .dropdown-content-more {
+      list-style-type: square;
+      margin-top: 0rem;
+      margin-left: 0.2rem; }
+    .navbar .navbar-list .dropdown-content-more a {
+      color: black;
+      padding: 0.2rem 0.3rem;
+      font-size: 0.5rem;
+      text-decoration: none;
+      display: block; }
+    .navbar .navbar-list .navbar-item:hover .column {
+      display: block; }
     .navbar .navbar-list .navbar-highlight {
       background: #b92025; }
       .navbar .navbar-list .navbar-highlight a {
@@ -3012,6 +3048,28 @@ body {
   flex-direction: column;
   -webkit-font-smoothing: antialiased; }
 
+ul.contribution-list li {
+  list-style-type: none; }
+
+#show-contribution-form {
+  border: none; }
+
+#submit-contribution {
+  color: #1e1e20;
+  text-decoration: none;
+  border: none;
+  padding-bottom: 1rem;
+  font-size: 1rem;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  -webkit-font-smoothing: antialiased;
+  display: flex;
+  align-items: flex-start; }
+  #submit-contribution:hover, #submit-contribution:focus {
+    border-bottom: none;
+    background: #b92025;
+    color: white; }
+
 div.search-result {
   padding-left: 1.5em;
   padding-bottom: 0.5em;
@@ -3019,6 +3077,30 @@ div.search-result {
 
 nav.center-block.text-center ul li {
   display: inline; }
+
+#contribution-form {
+  display: none; }
+
+input {
+  border: 1px dotted #999;
+  border-radius: 0;
+  width: 11rem;
+  height: 11rem;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+textarea {
+  padding: 0 10px;
+  height: 11rem;
+  width: 11rem;
+  margin: 0;
+  border: none;
+  background: none;
+  display: block;
+  font-family: "PT Serif", serif;
+  font-size: 0.9rem; }
 
 a {
   color: #0062cc;
