--- a/diamm/templates/website/composition/composition_detail.jinja2
+++ b/diamm/templates/website/composition/composition_detail.jinja2
@@ -1,28 +1,68 @@
 {% extends "base.jinja2" %}
 
-{% block body %}
-    <h1>{{ content.title }}</h1>
-    <h2>Composers</h2>
-    <ul>
-    {% for composer in content.composers %}
-        <li>
-            <a href="{{ composer.url }}">{{ composer.full_name }} </a>
-            {% if composer.uncertain %}
-                (uncertain)
-            {% endif %}
-        </li>
-    {% endfor %}
-    </ul>
-    <h2>Appears in</h2>
-    <ul>
-    {% for source in content.sources %}
-        <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
-    {% endfor %}
-    </ul>
+{% block title %}
+    <title>Composition: {{ content.title }}</title>
+{% endblock %}
 
-    {% set contributions = contribution_sort(content.title) %}
-    {% if contributions %}
-        {% include "website/contribution/contributions_made.jinja2" %}
-    {% endif %}
-    <li><a href="{{ url('contribution') }}">Make a Contribution</a></li>
+{% block body %}
+    <div class="row">
+        <div class="sixteen columns">
+            <h1>{{ content.title }}</h1>
+            <h2>Composers</h2>
+            <ul>
+            {% for composer in content.composers %}
+                <li>
+                    <a href="{{ composer.url }}">{{ composer.full_name }} </a>
+                    {% if composer.uncertain %}
+                        (uncertain)
+                    {% endif %}
+                </li>
+            {% endfor %}
+            </ul>
+            <h2>Appears in</h2>
+            <ul>
+            {% for source in content.sources %}
+                <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        {% set contributions = contribution_sort(content.title) %}
+        {% if contributions %}
+            {% include "website/contribution/contributions_made_list.jinja2" %}
+        {% endif %}
+    </div>
+    <div class="row">
+        <div class="sixteen columns">
+            <button id="show-contribution-form">Make a Contribution</button>
+
+            <div id="contribution-form">
+                {% include 'website/contribution/make_contribution.jinja2' %}
+            </div>
+
+            <div id="messages">
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                           {% if message.tags %}{% endif %}{{ message }}
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+
+{% block scripts %}
+
+<script>
+    document.getElementById('show-contribution-form').addEventListener('click', function ()
+    {
+        document.getElementById('contribution-form').style.display = "block";
+        document.getElementById('messages').style.display = "none";
+    });
+</script>
+
 {% endblock %}
