--- a/diamm/templates/website/contribution/contribution.jinja2
+++ b/diamm/templates/website/contribution/contribution.jinja2
@@ -1,10 +1,5 @@
-{% extends "base.jinja2" %}
+{% extends 'base.jinja2' %}
 
 {% block body %}
-
-    <form action=" " method="post">{% csrf_token %}
-        {{ form }}
-        <button type="submit">Submit</button>
-    </form>
 
 {% endblock %}
