--- a/diamm/templates/website/organization/organization_detail.jinja2
+++ b/diamm/templates/website/organization/organization_detail.jinja2
@@ -2,4 +2,38 @@
 
 {% block body %}
     <h1>Organization Detail</h1>
+
+
+    {% set contributions = contribution_sort(content.name) %}
+    {% if contributions %}
+        {% include "website/contribution/contributions_made_list.jinja2" %}
+    {% endif %}
+
+    <button id="show-contribution-form">Make a Contribution</button>
+
+    <div id="contribution-form">
+        {% include 'website/contribution/make_contribution.jinja2' %}
+    </div>
+
+    <div id="messages">
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </div>
+{% endblock %}
+
+{% block scripts %}
+
+    <script>
+        document.getElementById('show-contribution-form').addEventListener('click', function ()
+        {
+            document.getElementById('contribution-form').style.display = "block";
+            document.getElementById('messages').style.display = "none";
+        });
+    </script>
+
 {% endblock %}
