--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -72,6 +72,31 @@
             {% include "website/source/source_bibliography_block.jinja2" %}
             {% endif %}
         </div>
+        <div class="row">
+            <div class="sixteen columns">
+                {% set contributions = contribution_source_sort(content.display_name) %}
+                {% if contributions %}
+                    {% include "website/contribution/contributions_made_list.jinja2" %}
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="sixteen columns">
+            <button id="show-contribution-form">Make a Contribution</button>
+                <div id="contribution-form">
+                    {% include 'website/contribution/make_contribution.jinja2' %}
+                </div>
+                <div id="messages">
+                    {% if messages %}
+                        <ul class="messages">
+                            {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
@@ -162,6 +187,13 @@
 
                 itemDisplay.appendChild(docFrag);
             });
+        });
+    </script>
+    <script>
+        document.getElementById('show-contribution-form').addEventListener('click', function ()
+        {
+            document.getElementById('contribution-form').style.display = "block";
+            document.getElementById('messages').style.display = "none";
         });
     </script>
 {% endblock %}
