Fixed: user authentication
Added check to see if the user is logged in before the contribution form is displayed.

--- a/diamm/templates/website/contribution/contribution_display.jinja2
+++ b/diamm/templates/website/contribution/contribution_display.jinja2
@@ -7,7 +7,13 @@
 <button id="show-contribution-form">Make a Contribution</button>
 
 <div id="contribution-form">
-    {% include 'website/contribution/make_contribution.jinja2' %}
+    {% if user.is_authenticated() %}
+        {% include 'website/contribution/make_contribution.jinja2' %}
+    {% else %}
+        <p>Please log in to submit a contribution</p>
+    {% endif %}
+
+
 </div>
 
 <div id="messages">
