--- a/diamm/static/stylesheets/styles.scss
+++ b/diamm/static/stylesheets/styles.scss
@@ -39,24 +39,41 @@ ul.contribution-list {
 }
 
 #show-contribution-form {
-  border: none;
+
 }
 
 #submit-contribution {
-  color: $diamm-black;
+  position: absolute;
+  width: 25rem;
   text-decoration: none;
-  border: none;
   padding-bottom: 1rem;
-  font-size: 1rem;
-  font-family: $menu-font;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-  display: flex;
-  align-items: flex-start;
+  font-size: 0.8rem;
+  font-family: $sans-serif;
+  display: block;
   &:hover, &:focus {
-    border-bottom: none;
-    background: $diamm-red;
-    color: $diamm-white;
+
+  }
+}
+
+#contribution-form {
+  display: none;
+  margin: 0;
+
+  input {
+    border-radius: 0;
+    height: 11rem;
+    width: 25rem;
+
+  }
+  textarea {
+    padding: 0 10px;
+    margin-bottom: 0;
+    height: 11rem;
+    width: 25rem;
+    background: none;
+    display: block;
+    font-family: $serif;
+    font-size: 0.9rem;
   }
 }
 
@@ -72,34 +89,6 @@ nav.center-block.text-center{
       display: inline;
     }
   }
-
-}
-
-#contribution-form {
-  display:none;
-}
-
-input {
-  border: 1px dotted #999;
-  border-radius: 0;
-  width: 11rem;
-  height: 11rem;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-textarea {
-  padding : 0 10px;
-  height: 11rem;
-  width: 11rem;
-  margin: 0;
-  border: none;
-  background: none;
-  display: block;
-  font-family: $serif;
-  font-size: 0.9rem;
 }
 
 a {
