--- a/diamm/templates/website/contribution/contribution_display.jinja2
+++ b/diamm/templates/website/contribution/contribution_display.jinja2
@@ -27,3 +27,16 @@
 </div>
 
 {% endblock %}
+
+{% block scripts %}
+
+    <script>
+        document.getElementById('show-contribution-form').addEventListener('click', function ()
+        {
+            document.getElementById('contribution-form').style.display = "block";
+            document.getElementById('messages').style.display = "none";
+            document.getElementById('show-contribution-form').style.display = "none";
+        });
+    </script>
+
+{% endblock %}
