Refactor: Source type filtering
This commit refactors source type filtering with images.

The behaviour of source image filtering from the user's standpoint was that clicking on a filter removed all the other options. So clicking on 'composition' removed the option for 'source'.

This commit uses Solr's multi-facet functionality to preserve the facets across filtering, so that the counts of the results, and the option to switch facets in the interface, stays the same.

This commit also refactors template usage. Previously two templates were used to render the links: One for the sources with images (image_links), and one for everything else (type_links). This commit refactors them down to a single template.

Refs #37

--- a/diamm/templates/website/search/results/type_links.jinja2
+++ b/diamm/templates/website/search/results/type_links.jinja2
@@ -1,12 +1,18 @@
 {# Some fairly complex logic for these links, so we'll break them out here #}
-<a href="{{ url('search') }}?{% if params.q %}q={{ params.q }}{% endif %}{% if type %}&type={{ type }}{% endif %}"
+<a href="{{ url('search') }}?{%- if params.q -%}q={{ params.q }}{%- endif -%}{%- if type -%}&type={{ type }}{%- endif -%}"
    class="filter-type"
    data-facet-name="type"
    data-facet-value="{{ type }}">
   {% if type == params.type %}
     <strong>
   {% endif %}
-    {{ type | title }} {% if type != 'all' %}({{ count }}){% endif %}
+    {%- if type == 'all' -%}
+        All results
+    {%- elif type == 'sources_with_images' -%}
+        Sources with images ({{ count }})
+    {%- else -%}
+        {{ type | title }} ({{ count }})
+    {% endif %}
   {% if type == params.type %}
     </strong>
   {% endif %}
