--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -77,7 +77,7 @@
 
 {% block scripts %}
     <script src="{{ static('javascripts/lib/jquery/jquery.min.js') }}" type="application/javascript"></script>
-    <script src="{{ static('javascripts/lib/diva.js/js/diva.js') }}" type="application/javascript"></script>
+    <script src="{{ static('javascripts/lib/diva.js/js/diva.min.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/diva.js/js/utils.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/iiif-page-data.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/tabs.js') }}" type="application/javascript"></script>
@@ -93,7 +93,8 @@
                         $('#diva-wrapper').diva({
                             enableAutoTitle: false,
                             objectData: "{{ content.manifest_url }}",
-                            enableIIIFPageData: true
+                            enableIIIFPageData: true,
+                            enableIIIFStructure: true,
                         });
                     }
                 }}
